# basic_string_literal

./: .gitignore  CMakeLists.txt  LICENSE  basic_string_literal.cppm  character_concepts.cpp  character_concepts.hpp  core_literal.cpp  core_literal.hpp  main.cpp  std_ext.hpp  std_includes.hpp  universal_concepts.cpp  universal_concepts.hpp
